# Saboter

./: .gitignore  README.md  demo_seed33.html  demo_seed53.html  pyproject.toml
scripts/: collect_rollouts_smoke.py  export_metrics_dashboard.py  export_neural_eval_replays.py  profile_training_pipeline.py  smoke_test_neural_agent.py  train_ppo.py
src/saboter/: __init__.py  action_encoding.py  actions.py  board.py  cards.py  encoding_utils.py  env.py  evaluation.py  graph_encoding.py  metrics_dashboard.py  observation.py  visualization.py
src/saboter/agents/: __init__.py  graph_neural_agent.py  heuristic.py  neural_agent.py  random_agent.py
src/saboter/models/: __init__.py  graph_policy.py  history_transformer.py  policy.py
src/saboter/training/: __init__.py  checkpoint.py  curriculum.py  graph_ppo.py  graph_rollout.py  graph_tensorize.py  heuristic_frontier.py  ppo.py  progress_metrics.py  returns.py  reward_shaping.py  rollout.py  tensorize.py
tests/: conftest.py  test_agents.py  test_board.py  test_cards.py  test_encoding.py  test_env.py  test_evaluation.py  test_graph_policy.py  test_metrics_dashboard.py  test_neural_smoke.py  test_visualization.py
